# symloco

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/mygym/envs/mujoco/: __init__.py  symenv_a1.py  test_mujoco.py  test_mujoco_go2.py  test_mujoco_py.py  unitree_a1.py  unitree_go2.py
src/mygym/networks/: __init__.py  custom_network_example.py  custom_network_mirrorsymmetry.py  custom_network_symmetry.py  half_cheetah_sym.xml  simple_cheetah_base_env.py  simple_cheetah_env.py  simple_env.py  simple_idp_env.py  simple_sym_network.py  target_velcity_generator.py  test_cheetah_sym.py  test_mujoco.py  testloss.py
src/mygym/utils/: target_velocity_generator.py
src/scripts/: run_simple_cheetah
src/tests/: main_a1.py  main_cheetah.py  main_go2.py  test_sym_network.py  test_utils.py
src/tests/logs/SAC_1/: events.out.tfevents.1717379459.jelee-MS-7B98.1249372.0
src/tests/logs/SAC_10/: events.out.tfevents.1717379565.jelee-MS-7B98.1249372.9
src/tests/logs/SAC_100/: events.out.tfevents.1717381876.jelee-MS-7B98.1253122.27
src/tests/logs/SAC_101/: events.out.tfevents.1717381888.jelee-MS-7B98.1253122.28
src/tests/logs/SAC_102/: events.out.tfevents.1717381899.jelee-MS-7B98.1253122.29
src/tests/logs/SAC_103/: events.out.tfevents.1717381910.jelee-MS-7B98.1253122.30
src/tests/logs/SAC_104/: events.out.tfevents.1717381922.jelee-MS-7B98.1253122.31
src/tests/logs/SAC_105/: events.out.tfevents.1717381933.jelee-MS-7B98.1253122.32
src/tests/logs/SAC_106/: events.out.tfevents.1717381945.jelee-MS-7B98.1253122.33
src/tests/logs/SAC_107/: events.out.tfevents.1717381957.jelee-MS-7B98.1253122.34
src/tests/logs/SAC_108/: events.out.tfevents.1717381968.jelee-MS-7B98.1253122.35
src/tests/logs/SAC_109/: events.out.tfevents.1717381980.jelee-MS-7B98.1253122.36
src/tests/logs/SAC_11/: events.out.tfevents.1717379577.jelee-MS-7B98.1249372.10
src/tests/logs/SAC_110/: events.out.tfevents.1717381992.jelee-MS-7B98.1253122.37
src/tests/logs/SAC_111/: events.out.tfevents.1717382005.jelee-MS-7B98.1253122.38
src/tests/logs/SAC_112/: events.out.tfevents.1717382017.jelee-MS-7B98.1253122.39
src/tests/logs/SAC_113/: events.out.tfevents.1717382029.jelee-MS-7B98.1253122.40
src/tests/logs/SAC_114/: events.out.tfevents.1717382040.jelee-MS-7B98.1253122.41
src/tests/logs/SAC_115/: events.out.tfevents.1717382052.jelee-MS-7B98.1253122.42
src/tests/logs/SAC_116/: events.out.tfevents.1717382063.jelee-MS-7B98.1253122.43
src/tests/logs/SAC_117/: events.out.tfevents.1717382074.jelee-MS-7B98.1253122.44
src/tests/logs/SAC_118/: events.out.tfevents.1717382086.jelee-MS-7B98.1253122.45
src/tests/logs/SAC_119/: events.out.tfevents.1717382097.jelee-MS-7B98.1253122.46
src/tests/logs/SAC_12/: events.out.tfevents.1717379588.jelee-MS-7B98.1249372.11
src/tests/logs/SAC_120/: events.out.tfevents.1717382109.jelee-MS-7B98.1253122.47
src/tests/logs/SAC_121/: events.out.tfevents.1717382120.jelee-MS-7B98.1253122.48
src/tests/logs/SAC_122/: events.out.tfevents.1717382132.jelee-MS-7B98.1253122.49
src/tests/logs/SAC_123/: events.out.tfevents.1717382143.jelee-MS-7B98.1253122.50
src/tests/logs/SAC_124/: events.out.tfevents.1717382155.jelee-MS-7B98.1253122.51
src/tests/logs/SAC_125/: events.out.tfevents.1717382166.jelee-MS-7B98.1253122.52
src/tutorials/: main_test.py  main_train.py  sb3_example1.py  sb3_example2.py
(+1350 files in other folders)
