# add_subdirectory(libs)
# if (SYMLOCO_BUILD_APPS)
#     add_subdirectory(apps)
# endif ()

# add_subdirectory()

# # pybind11
# # set(pybind11_DIR "/home/jelee/.local/lib/python3.8/site-packages/pybind11/share/cmake/pybind11")
# find_package(Python COMPONENTS Interpreter Development)
# find_package(pybind11 CONFIG REQUIRED)
# include_directories(${pybind11_INCLUDE_DIRS})
# add_subdirectory(pybindings)


